--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lodash.get": "^4.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "react-select": "^3.0.8"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
